--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
        </div>
     </section>
 
+    <section class="side-banner">
+        <div class="divwidth">
+            <img src="images/biobg2.png" alt="">
+        </div>
+        <div class="divwidth">
+            <h2>Dream Big</h2>
+        <h4>Become a web developer</h4>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">Download Resume</a>
+        </div>
+    
+    </section>
     
 </body>
 </html>
